try: skip_build_push NOT WORKING

--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -140,6 +140,9 @@ jobs:
             id-token: write
 
         steps:
+            - name: Checkout repository
+              uses: actions/checkout@v3
+
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v2
 
