--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -29,15 +29,16 @@ jobs:
     check_version:
         runs-on: ubuntu-latest
         outputs:
-            latest_big_version: ${{ steps.latest_info.outputs.latest_big_version }}
-            latest_small_version: ${{ steps.latest_info.outputs.latest_small_version }}
-            latest_commit: ${{ steps.latest_info.outputs.latest_commit }}
-            latest_version: ${{ steps.latest_info.outputs.latest_version }}
-            latest: ${{ steps.latest_info.outputs.latest }}
-            build_big_version: ${{ steps.latest_info.outputs.build_big_version }}
-            build_small_version: ${{ steps.latest_info.outputs.build_small_version }}
-            build_commit: ${{ steps.latest_info.outputs.build_commit }}
-            build_version: ${{ steps.latest_info.outputs.build_version }}
+            latest_big_version: ${{ steps.latest_version.outputs.latest_big_version }}
+            latest_small_version: ${{ steps.latest_version.outputs.latest_small_version }}
+            latest_commit: ${{ steps.latest_version.outputs.latest_commit }}
+            latest_version: ${{ steps.latest_version.outputs.latest_version }}
+            latest: ${{ steps.latest_version.outputs.latest }}
+            build_big_version: ${{ steps.build_version.outputs.build_big_version }}
+            build_small_version: ${{ steps.build_version.outputs.build_small_version }}
+            build_commit: ${{ steps.build_version.outputs.build_commit }}
+            build_version: ${{ steps.build_version.outputs.build_version }}
+            platforms: ${{ steps.build_platforms.outputs.platforms }}
 
         permissions:
             contents: read
@@ -50,8 +51,8 @@ jobs:
               with:
                   cmd: curl -k -sS https://api.github.com/repos/lucktu/n2n/contents/Linux?ref=master | jq '.[]|{path}|..|.path?' | grep linux_x64 | sed 's/\"//g'
 
-            - name: Check latest_info
-              id: latest_info
+            - name: Check latest_version
+              id: latest_version
               run: |
                   LOG_INFO() {
                   echo -e "\033[0;32m[INFO] $* \033[0m"
@@ -75,38 +76,98 @@ jobs:
                   latest_commit=${latest_commit%%.*}
                   latest_commit=${latest_commit%%_*}
                   LOG_INFO "latest_commit: ${latest_commit}"
-                  # build-version
-                  if [[ -z "${{ env.BIG_VERSION }}" || -z "${{ env.SMALL_VERSION }}" ]];then
-                      build_big_version=${latest_big_version}
-                      LOG_INFO "build_big_version: ${build_big_version}"
-                      build_small_version=${latest_small_version}
-                      LOG_INFO "build_small_version: ${build_small_version}"
-                      build_commit=${latest_commit}
-                      LOG_INFO "build_commit: ${build_commit}"
-                  fi
-                  # is latest ?
-                  if [[ "${build_big_version}" == "${latest_big_version}" || "${build_small_version}" == "${latest_small_version}" || "${build_commit}" == "${latest_commit}" ]];then 
-                      latest=true
-                  fi
-                  LOG_INFO "latest: ${latest}"
                   # latest_version
                   latest_version="${latest_big_version}_${latest_small_version}_r${latest_commit}"
                   LOG_INFO "latest_version: ${latest_version}"
-                  # build_version
-                  build_version="${build_big_version}_${build_small_version}_r${build_commit}"
-                  LOG_INFO "build_version: ${build_version}"
                   # latest variable
                   echo "latest_big_version=${latest_big_version}" >> $GITHUB_OUTPUT
                   echo "latest_small_version=${latest_small_version}" >> $GITHUB_OUTPUT
                   echo "latest_commit=${latest_commit}" >> $GITHUB_OUTPUT
                   echo "latest_version=${latest_version}" >> $GITHUB_OUTPUT
+            - name: Check build_version
+              id: build_version
+              run: |
+                  # build-version
+                  if [[ -z "${{ env.BIG_VERSION }}" || -z "${{ env.SMALL_VERSION }}" ]];then
+                      build_big_version=${step.latest_version.outputs.latest_big_version}
+                      LOG_INFO "build_big_version: ${build_big_version}"
+                      build_small_version=${step.latest_version.outputs.latest_small_version}
+                      LOG_INFO "build_small_version: ${build_small_version}"
+                      build_commit=${step.latest_version.outputs.latest_commit}
+                      LOG_INFO "build_commit: ${build_commit}"
+                  fi
+                  LOG_INFO "latest: ${latest}"
+                  # build_version
+                  build_version="${build_big_version}_${build_small_version}_r${build_commit}"
+                  LOG_INFO "build_version: ${build_version}"
                   # build variable
-                  echo "latest=${latest}" >> $GITHUB_OUTPUT
                   echo "build_big_version=${build_big_version}" >> $GITHUB_OUTPUT
                   echo "build_small_version=${build_small_version}" >> $GITHUB_OUTPUT
                   echo "build_commit=${build_commit}" >> $GITHUB_OUTPUT
                   echo "build_version=${build_version}" >> $GITHUB_OUTPUT
 
+            - name: Check platforms
+              id: build_platforms
+              run: |
+                  LOG_INFO() {
+                  echo -e "\033[0;32m[INFO] $* \033[0m"
+                  }
+                  LOG_ERROR() {
+                  echo -e "\033[0;31m[ERROR] $* \033[0m"
+                  }
+
+                  LOG_WARNING() {
+                  echo -e "\033[0;33m[WARNING] $* \033[0m"
+                  }
+                  build_big_version=${step.build_version.outputs.latest_big_version}
+                  build_small_version=${step.build_version.outputs.latest_small_version}
+                  build_commit=${step.build_version.outputs.latest_commit}
+                  platforms=''
+                  for fn_platform in "x64" "x86" "arm64(aarch64)" "arm"; do
+                      # 遍历可能存在的文件夹进行匹配
+                      for down_dir in "" "/Old/linux_${MACHINE}" "n2n_${BIG_VERSION}"; do
+                          down_path=$(curl -k -sS https://api.github.com/repos/lucktu/n2n/contents/${MACHINE^}${down_dir}?ref=master | jq '.[]|{path}|..|.path?' | grep linux_${MACHINE:+${MACHINE}_} | grep ${BIG_VERSION} | grep ${SMALL_VERSION} | grep ${COMMIT} | sed 's/\"//g')
+                          if [[ -z "${down_path}" ]]; then
+                              LOG_WARNING "down_path 获取失败 - ${down_dir}"
+                              continue
+                          fi
+                          LOG_INFO "use down_dir: ${down_dir}"
+                          break
+                      done
+                      case ${fn_platform} in
+                      x64)
+                          add_platform="linux/amd64"
+                          ;;
+                      x86)
+                          add_platform="linux/386"
+                          ;;
+                      "arm64(aarch64)")
+                          add_platform="linux/arm64"
+                          ;;
+                      arm)
+                          add_platform="linux/arm/v7"
+                          ;;
+
+                      *)
+                          LOG_ERROR "不支持的CPU架构类型 - ${fn_platform}"
+                          exit 1
+                          ;;
+                      esac
+                      if [[ -z "${down_path}" ]]; then
+                          LOG_WARNING "not found: ${fn_platform}"
+                          continue
+                      fi
+                      LOG_INFO "find: ${fn_platform}"
+                      platforms="${platforms}, ${add_platform}"
+                  done
+                  platforms="${platforms:2}"
+
+                  if [[ -z "${platforms}" ]]; then
+                      LOG_ERROR "platforms 获取失败"
+                      exit 1
+                  fi
+                  LOG_INFO "platforms: ${platforms}"
+                  echo "platforms=${platforms}" >> $GITHUB_OUTPUT
     check_push:
         runs-on: ubuntu-latest
         outputs:
@@ -205,8 +266,8 @@ jobs:
                       # latest
                       type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
                       # releases-v3
-                      type=raw,value=v3,enable=${{ needs.check_version.outputs.latest == true }}
-                      type=raw,value=releases-v3,enable=${{ needs.check_version.outputs.latest == true }}
+                      type=raw,value=v3,enable=${{ needs.check_version.outputs.build_big_version == v3 }}
+                      type=raw,value=releases-v3,enable=${{ needs.check_version.outputs.build_big_version == v3 }}
                       # releases-v2s
                       type=raw,value=v2s,enable=${{ needs.check_version.outputs.build_big_version == 'v2s' && needs.check_version.outputs.build_small_version == '2.1.0' && needs.check_version.outputs.build_commit == '124' }}
                       type=raw,value=releases-v2s,enable=${{ needs.check_version.outputs.build_big_version == 'v2s' && needs.check_version.outputs.build_small_version == '2.1.0' && needs.check_version.outputs.build_commit == '124' }}
@@ -232,7 +293,7 @@ jobs:
               uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
               with:
                   context: ${{ env.APP_NAME }}
-                  platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7
+                  platforms: ${{ needs.check_version.outputs.platforms }}
                   push: ${{ github.event_name != 'pull_request' }}
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
@@ -242,7 +303,6 @@ jobs:
                       BIG_VERSION=${{ needs.check_version.outputs.build_big_version }}
                       SMALL_VERSION=${{ needs.check_version.outputs.build_small_version }}
                       COMMIT=${{ needs.check_version.outputs.build_commit }}
-                      LATEST=${{ needs.check_version.outputs.latest }}
             # "${{ env.BIG_VERSION }}" == "${build_big_version}" || "${{ env.SMALL_VERSION }}" == "${build_small_version}" || "${{ env.COMMIT }}" == "${build_commit}"
             # Sign the resulting Docker image digest except on PRs.
             # This will only write to the public Rekor transparency log when the Docker
