--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -21,9 +21,9 @@ env:
     # github.repository as <account>/<repo>
     KERNEL: linux
     MACHINE: ""
-    BIG_VERSION: v3
-    SMALL_VERSION: 3.1.1-16
-    COMMIT: r1200
+    BIG_VERSION: v2
+    SMALL_VERSION: 2.7.0
+    COMMIT: 258
 
 jobs:
     check_version:
