--- a/.github/workflows/docker-n2n_lucktu-publish.yml
+++ b/.github/workflows/docker-n2n_lucktu-publish.yml
@@ -22,8 +22,8 @@ env:
     KERNEL: linux
     MACHINE: ""
     BIG_VERSION: v2
-    SMALL_VERSION: 2.7.0
-    COMMIT: 258
+    SMALL_VERSION: 3.1.1-16
+    COMMIT: 1200
 
 jobs:
     check_version:
@@ -56,6 +56,12 @@ jobs:
               run: |
                   LOG_INFO() {
                   echo -e "\033[0;32m[INFO] $* \033[0m"
+                  }
+                  LOG_WARNING() {
+                      echo -e "\033[0;33m[WARNING] $* \033[0m"
+                  }
+                  LOG_ERROR() {
+                      echo -e "\033[0;31m[ERROR] $* \033[0m"
                   }
                   latest_path=${{ steps.get_latest_path.outputs.value }}
                   LOG_INFO "latest_path: ${latest_path}"
@@ -90,6 +96,12 @@ jobs:
                   LOG_INFO() {
                   echo -e "\033[0;32m[INFO] $* \033[0m"
                   }
+                  LOG_WARNING() {
+                      echo -e "\033[0;33m[WARNING] $* \033[0m"
+                  }
+                  LOG_ERROR() {
+                      echo -e "\033[0;31m[ERROR] $* \033[0m"
+                  }
                   # build-version
                   if [[ -z "${{ env.BIG_VERSION }}" || -z "${{ env.SMALL_VERSION }}" ]];then
                       build_big_version=${{ steps.latest_version.outputs.latest_big_version }}
@@ -107,6 +119,10 @@ jobs:
                       build_commit=${{ env.COMMIT }}
                       LOG_INFO "build_commit: ${build_commit}"
                   fi
+                  if [[ ! "${build_big_version}" =~ "v" || ${build_big_version} =~ "v" ||  ${build_commit} =~ "r"  ]];then
+                      LOG_ERROR "不合法 - 版本号"
+                      exit 1
+                  fi
                   # build_version
                   build_version="${build_big_version}_${build_small_version}_r${build_commit}"
                   LOG_INFO "build_version: ${build_version}"
@@ -120,13 +136,13 @@ jobs:
               id: build_platforms
               run: |
                   LOG_INFO() {
-                  echo -e "\033[0;32m[INFO] $* \033[0m"
-                  }
-                  LOG_ERROR() {
-                  echo -e "\033[0;31m[ERROR] $* \033[0m"
+                      echo -e "\033[0;32m[INFO] $* \033[0m"
                   }
                   LOG_WARNING() {
-                  echo -e "\033[0;33m[WARNING] $* \033[0m"
+                      echo -e "\033[0;33m[WARNING] $* \033[0m"
+                  }
+                  LOG_ERROR() {
+                      echo -e "\033[0;31m[ERROR] $* \033[0m"
                   }
                   build_kernel=${{ env.KERNEL }}
                   build_big_version=${{ steps.build_version.outputs.build_big_version }}
@@ -223,7 +239,10 @@ jobs:
                   echo -e "\033[0;32m[INFO] $* \033[0m"
                   }
                   LOG_WARNING() {
-                  echo -e "\033[0;33m[WARNING] $* \033[0m"
+                      echo -e "\033[0;33m[WARNING] $* \033[0m"
+                  }
+                  LOG_ERROR() {
+                      echo -e "\033[0;31m[ERROR] $* \033[0m"
                   }
                   # e.g. "2022-10-30T19:29:49.877019Z"
                   last_pulled_date=${{ steps.get_tag_last_pulled.outputs.value }}
